--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Viajes Chile</title>
 </head>
 <body>
-    <!-- Se agrega Carrusel con bootstrap -->
+    <!-- Se agrega Navbar con bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top mb-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
