--- a/index.html
+++ b/index.html
@@ -118,6 +118,63 @@
                 </div>
             </div>
         </section>
+         <!--Sección de Destacados-->
+         <section id="destacados" class="container text-light p-5">
+            <div class="text-center" style="border-bottom: solid;">
+                <h1>DESTACADOS</h1>
+            </div>
+            <div class="row">
+                <!--Por defecto una columna, En dispositivos más grandes muestran 3 columnas-->
+                <div class="col-12 col-sm-3 py-2">
+                    <div class="card bg-info">
+                        <img src="assets/img/card1.jpg" class="card-img-top" alt="Panqueques">
+                        <div class="card-body ">
+                            <p class="card-text">
+                                Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra,
+                                blandit erat
+                                luctus faucibus orci.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-3 py-2">
+                    <div class="card bg-info">
+                        <img src="assets/img/card2.jpg" class="card-img-top" alt="Panqueques">
+                        <div class="card-body ">
+                            <p class="card-text">
+                                Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra,
+                                blandit erat
+                                luctus faucibus orci.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-3 py-2">
+                    <div class="card bg-info">
+                        <img src="assets/img/card3.jpg" class="card-img-top" alt="Panqueques">
+                        <div class="card-body ">
+                            <p class="card-text">
+                                Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra,
+                                blandit erat
+                                luctus faucibus orci.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-3 py-2">
+                    <div class="card bg-info">
+                        <img src="assets/img/card4.jpg" class="card-img-top" alt="Panqueques">
+                        <div class="card-body ">
+                            <p class="card-text">
+                                Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra,
+                                blandit erat
+                                luctus faucibus orci.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     
